[project]
name = "recordmebe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.13.1",
    "pydantic-settings==2.2.1",
    "pydantic[email]==2.6.4",
    "ruff>=0.11.7",
    "pydantic-core==2.16.3",
    "rich==13.3.5",
    "python-json-logger==2.0.7",
    "python-dotenv==1.0.0",
    "numpy>=2.2.5",
    "setuptools>=80.0.0",
    "boto3>=1.38.3",
    "requests>=2.32.3",
    "botocore>=1.38.3",
    "beautifulsoup4==4.12.3",
    "fastapi>=0.115.12",
    "secure>=1.0.1",
    "datadog>=0.51.0",
    "ddtrace>=3.5.1",
]
