[project]
name = "recordmebe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.13.1",
    "pydantic-settings==2.2.1",
    "pydantic[email]==2.6.4",
    "ruff>=0.11.7",
    "pydantic-core==2.16.3",
    "rich==13.3.5",
    "python-json-logger==2.0.7",
    "python-dotenv==1.0.0",
    "numpy>=2.2.5",
    "setuptools>=80.0.0",
    "boto3>=1.38.3",
    "requests>=2.32.3",
    "botocore>=1.38.3",
    "beautifulsoup4==4.12.3",
    "fastapi>=0.115.12",
    "secure>=1.0.1",
    "datadog>=0.51.0",
    "ddtrace>=3.5.1",
    "black>=25.1.0",
    "isort>=6.0.1",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.cache
    | \.pytest_cache
    | coverage
    | docs
    | _build
    | buck-out
    | build
    | dist
    | pb2.py
    | \.pyi
    | orgs
  )/
)
'''

[tool.isort]
profile = 'black'
skip = ['.cache', '.pytest_cache', 'venv', 'coverage', '.git']
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
